--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
     display: block;
     position:relative;
     z-index: 0;
-    width:30%;
+    width:40%;
     margin-top: -10%;
-    left: -4%
+    left: -4%;
+    border-radius: 10%
+
 }
 
 header {
@@ -21,7 +23,7 @@ header {
     z-index: 1;
     width: 70%;
     height: 200px; 
-    top: 70%; 
+    top: 90%; 
     font-family: 'Cinzel', serif; 
     color: #000000;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -32,8 +34,8 @@ header {
     position: relative;
     z-index: 6;
     left: 28%;
-    top: -160px;
-    color: #3A2D3B; /* Adjust text color for contrast */
+    top: -290px;
+    color: #a276a5; /* Adjust text color for contrast */
 }
 
 .pokemonCard {
@@ -51,8 +53,8 @@ header {
     font-family: 'Cinzel', serif; /* Use a fantasy font */
     font-size: 16px;
     color: #ffffff; /* Light text color for contrast */
-    background-color: #4B3D3A; /* Darker background */
-    border: 2px solid #8B5B29; /* Rustic brown border */
+    background-color: #75615d; /* Darker background */
+    border: 2px solid #3b2610; /* Rustic brown border */
     border-radius: 5px; /* Slightly rounded corners */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); /* Shadow for depth */
     outline: none; /* Remove default outline */
@@ -90,7 +92,7 @@ header {
     position: relative;
     margin-top: -130px;
     left: 30%;
-    top: -370px;
+    top: -480px;
     font-family: 'Cinzel', serif; /* Epic font */
     font-size: 18px; /* Maintain similar size; adjust as needed */
     color: #0e0c0c; /* Light text color for contrast */
